@@ -10,6 +10,7 @@ Users which contributed patches added to versions after 1.0:
 * MikeCastle
 * RichardP
 * Robin Rowe (rower@movieeditor.com)
+* StefanTrcek
 * TomScanlan
 * Trent
 * UngarPeter
