@@ -5,6 +5,8 @@ Changes for bugfix release 1.0.3:
 * fixed bug AuthenicationFailedNoHeader
 * fixed bug BacklinksMissesSomeFreeLinks
   fix contributed by BrianHunter
+* fix bug EmptyTableElements
+  fix contributed by StefanTrcek
 
 Changes for bugfix release 1.0.2 (August 26, 2007):
 
